--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section id="header">
         <header>
             <div class="logo">
-                <img src="https://w7.pngwing.com/pngs/705/162/png-transparent-staff-of-hermes-caduceus-as-a-symbol-of-medicine-caduceus-as-a-symbol-of-medicine-doctor-symbol-caduceus-miscellaneous-symmetry-monochrome-thumbnail.png" alt="logo">Medica</div>
+                <img src="https://w7.pngwing.com/pngs/530/525/png-transparent-green-and-white-medical-logo-herbalism-medicine-alternative-health-services-naturopathy-pharmacy-leaf-logo-plant-stem.png" alt="logo">Medica</div>
             <nav>
                 <ul>
                         <li><a href="#">Home</a></li>
@@ -303,7 +303,7 @@
 
     <section id="soni">
         <div class="bc">
-            <img src="https://static.vecteezy.com/system/resources/previews/007/278/150/non_2x/dark-background-abstract-with-light-effect-vector.jpg" alt="">
+            <!-- <img src="https://static.vecteezy.com/system/resources/previews/007/278/150/non_2x/dark-background-abstract-with-light-effect-vector.jpg" alt=""> -->
         </div>
         <div class="content">
             <div class="service-box">
